--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-template": "^5.0.0",
     "jsonwebtoken": "^7.0.1",
     "koa": "^2.0.0",
+    "koa-bodyparser": "^3.1.0",
     "koa-convert": "^1.2.0",
     "koa-jwt": "^2.0.1",
     "koa-passport": "^2.1.1",
@@ -32,7 +33,7 @@
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
     "mongoose": "^4.5.3",
-    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-hot-loader": "^3.0.0-beta.2",
