--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "bcrypt": "^0.8.7",
     "co": "^4.6.0",
     "co-body": "^4.2.0",
     "css-loader": "^0.23.1",
@@ -42,6 +43,8 @@
     "scss-loader": "0.0.1",
     "source-map-support": "^0.4.1",
     "style-loader": "^0.13.1",
+    "thenify": "^3.2.0",
+    "thenify-all": "^1.6.0",
     "webpack": "^1.13.1",
     "webpack-node-externals": "^1.2.0"
   },
