--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
-    "babel-plugin-transform-es2015-spread": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "bcrypt": "^0.8.7",
-    "co": "^4.6.0",
-    "co-body": "^4.2.0",
     "css-loader": "^0.23.1",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.22.0",
@@ -34,6 +31,7 @@
     "koa-proxy": "^0.6.0",
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
+    "lodash.merge": "^4.4.0",
     "mongoose": "^4.5.3",
     "passport-local": "^1.0.0",
     "react": "^15.2.0",
@@ -47,11 +45,11 @@
     "thenify": "^3.2.0",
     "thenify-all": "^1.6.0",
     "webpack": "^1.13.1",
+    "webpack-merge": "^0.14.0",
     "webpack-node-externals": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "co-supertest": "0.0.10",
     "koa-proxy": "^0.6.0",
     "mocha": "^2.5.3",
     "node-inspector": "^0.12.8",
