--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-node-externals": "^1.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "inject-loader": "^2.0.1",
