--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
   "scripts": {
     "start": "gulp build && NODE_ENV=production node server/bundle.js",
     "dev": "gulp watch",
-    "test": "NODE_ENV=test mocha-webpack --webpack-config webpack.server.test.config.js"
+    "dev:debug": "node-debug --web-port 8088 gulp watch",
+    "test": "NODE_ENV=test mocha-webpack --webpack-config webpack.server.test.config.js",
+    "test:client": "NODE_ENV=test karma start"
   },
   "dependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "bcrypt": "^0.8.7",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.22.0",
     "html-webpack-template": "^5.0.0",
@@ -34,31 +40,56 @@
     "koa-static": "^3.0.0",
     "lodash.merge": "^4.4.0",
     "mongoose": "^4.5.3",
+    "node-sass": "^3.8.0",
+    "normalize.css": "^4.2.0",
     "passport-local": "^1.0.0",
+    "postcss-loader": "^0.9.1",
     "react": "^15.2.0",
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-addons-update": "^15.3.0",
     "react-dom": "^15.2.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
+    "react-router-redux": "^4.0.5",
+    "react-toolbox": "^1.1.2",
+    "redux": "^3.5.2",
+    "redux-form": "^6.0.0-rc.4",
+    "redux-observable": "^0.9.0",
+    "redux-thunk": "^2.1.0",
     "remove": "^0.1.5",
-    "scss-loader": "0.0.1",
+    "resolve-url-loader": "^1.6.0",
+    "rxjs": "^5.0.0-beta.11",
+    "sass-loader": "^4.0.0",
     "source-map-support": "^0.4.1",
     "style-loader": "^0.13.1",
     "thenify": "^3.2.0",
     "thenify-all": "^1.6.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-merge": "^0.14.0",
-    "webpack-node-externals": "^1.2.0"
+    "webpack-node-externals": "^1.2.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "inject-loader": "^2.0.1",
+    "karma": "^1.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "koa-proxy": "^0.6.0",
     "mocha": "^3.0.2",
     "mocha-webpack": "^0.5.0",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.2",
+    "phantomjs": "^2.1.7",
+    "phantomjs-polyfill": "0.0.2",
     "sinon": "^1.17.5",
     "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0",
