--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-eslint": "^6.1.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "eslint-plugin-react": "^6.1.2",
     "inject-loader": "^2.0.1",
     "karma": "^1.2.0",
     "karma-cli": "^1.0.1",
@@ -90,6 +91,7 @@
     "nodemon": "^1.9.2",
     "phantomjs": "^2.1.7",
     "phantomjs-polyfill": "0.0.2",
+    "redbox-react": "^1.3.0",
     "sinon": "^1.17.5",
     "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0",
