--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "bcrypt": "^0.8.7",
     "css-loader": "^0.23.1",
+    "d3": "^4.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -39,6 +40,7 @@
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "lodash.merge": "^4.4.0",
+    "moment": "^2.14.1",
     "mongoose": "^4.5.3",
     "node-sass": "^3.8.0",
     "normalize.css": "^4.2.0",
@@ -48,6 +50,7 @@
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
     "react-dom": "^15.2.0",
+    "react-faux-dom": "^2.7.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
