--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^0.8.7",
     "css-loader": "^0.23.1",
     "d3": "^4.2.2",
+    "denormalizr": "^0.3.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -44,6 +45,7 @@
     "mongoose": "^4.5.3",
     "node-sass": "^3.8.0",
     "normalize.css": "^4.2.0",
+    "normalizr": "^2.2.1",
     "passport-local": "^1.0.0",
     "postcss-loader": "^0.9.1",
     "react": "^15.2.0",
