--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "gulp watch",
     "dev:debug": "node-debug --web-port 8088 gulp watch",
     "test": "NODE_ENV=test mocha-webpack --webpack-config webpack.server.test.config.js",
-    "test:client": "NODE_ENV=test karma start"
+    "test:client": "NODE_ENV=test mocha --require babel-register --require app/test/mocha.js 'app/**/*.spec.js' --watch"
   },
   "dependencies": {
     "autoprefixer": "^6.4.0",
@@ -74,14 +74,19 @@
     "webpack": "^1.13.1",
     "webpack-merge": "^0.14.0",
     "webpack-node-externals": "^1.2.0",
+    "webpack-vendor-chunk-plugin": "^1.0.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
+    "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "enzyme": "^2.4.1",
     "eslint-plugin-react": "^6.1.2",
+    "fetch-mock": "^5.1.1",
     "inject-loader": "^2.0.1",
+    "jsdom": "^9.4.5",
     "karma": "^1.2.0",
     "karma-cli": "^1.0.1",
     "karma-mocha": "^1.1.1",
@@ -92,11 +97,13 @@
     "koa-proxy": "^0.6.0",
     "mocha": "^3.0.2",
     "mocha-webpack": "^0.5.0",
+    "node-fetch": "^1.6.0",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.2",
     "phantomjs": "^2.1.7",
     "phantomjs-polyfill": "0.0.2",
     "redbox-react": "^1.3.0",
+    "redux-mock-store": "^1.1.4",
     "sinon": "^1.17.5",
     "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0",
