--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "bcrypt": "^0.8.7",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "d3": "^4.2.2",
     "denormalizr": "^0.3.2",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -30,6 +30,7 @@
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.22.0",
     "html-webpack-template": "^5.0.0",
+    "immutability-helper": "^2.0.0",
     "jsonwebtoken": "^7.0.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.1.0",
@@ -40,19 +41,20 @@
     "koa-proxy": "^0.6.0",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
-    "lodash.merge": "^4.4.0",
+    "lodash.merge": "^4.6.0",
     "moment": "^2.14.1",
     "mongoose": "^4.5.3",
     "node-sass": "^3.8.0",
     "normalize.css": "^4.2.0",
     "normalizr": "^2.2.1",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
-    "postcss-loader": "^0.9.1",
+    "passport-twitter": "^1.0.4",
+    "postcss-loader": "^0.13.0",
     "react": "^15.2.0",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-addons-update": "^15.3.0",
     "react-dom": "^15.2.0",
-    "react-faux-dom": "^2.7.1",
+    "react-faux-dom": "^3.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
@@ -60,7 +62,7 @@
     "react-toolbox": "^1.1.2",
     "redux": "^3.5.2",
     "redux-form": "^6.0.0-rc.4",
-    "redux-observable": "^0.9.0",
+    "redux-observable": "^0.11.0",
     "redux-thunk": "^2.1.0",
     "remove": "^0.1.5",
     "resolve-url-loader": "^1.6.0",
@@ -97,7 +99,7 @@
     "karma-webpack": "^1.8.0",
     "koa-proxy": "^0.6.0",
     "mocha": "^3.0.2",
-    "mocha-webpack": "^0.5.0",
+    "mocha-webpack": "^0.6.0",
     "node-fetch": "^1.6.0",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.2",
@@ -109,7 +111,7 @@
     "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0",
     "supertest": "^2.0.0",
-    "supertest-as-promised": "^3.2.0",
+    "supertest-as-promised": "^4.0.0",
     "webpack-dev-server": "^1.14.1"
   },
   "keywords": [],
