add google auth

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "normalize.css": "^4.2.0",
     "normalizr": "^2.2.1",
     "passport-github": "^1.1.0",
+    "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
     "postcss-loader": "^0.13.0",
     "react": "^15.2.0",
     "react-addons-css-transition-group": "^15.3.0",
