--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.1.0",
     "koa-compose": "^3.1.0",
+    "koa-compress": "^2.0.0",
     "koa-convert": "^1.2.0",
     "koa-jwt": "^2.0.1",
     "koa-passport": "^2.1.1",
