--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "koa-bodyparser": "^3.1.0",
     "koa-compose": "^3.1.0",
     "koa-compress": "^2.0.0",
+    "koa-conditional-get": "^2.0.0",
     "koa-convert": "^1.2.0",
+    "koa-etag": "^3.0.0",
     "koa-jwt": "^2.0.1",
     "koa-passport": "^2.1.1",
     "koa-proxy": "^0.6.0",
