--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-uglify": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "html-webpack-template": "^5.0.0",
